# ssi-poc

./: .gitignore  README.md  Taskfile.yml  docker-compose.yml  pyproject.toml
config-issuer/: .gitignore  issuer-service.conf.tmpl
config-verifier/: .gitignore  verifier-service.conf.tmpl
waltid_client/: main.py
